<resources>
    <!--main-->
    <string name="app_name">Water my plants</string>
    <string name="default_web_client_id" translatable="false">210973644212-5jr5neimt247egm39m5lqovm0d5heuv8.apps.googleusercontent.com</string>

    <!--settings-->

    <string name="title_activity_settings">SettingsActivity</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!--login-->
    <string name="emailtext">Email</string>
    <string name="emailhint">Enter your email</string>
    <string name="passwordtext">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="logintext">Login</string>
    <string name="registertext">Register</string>
    <string name="button_login_with_google">Login with Google</string>
    <string name="button_login_with_facebook">Login with Facebook</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="hint_repeat_your_password">Repeat your password</string>
    <string name="repeat_password_text">Repeat Password</string>
    <string name="hint_enter_your_password">Enter your password</string>
    <string name="hint_enter_your_username">Enter your username</string>
    <string name="username_text">Username</string>

    <!--menu-->
    <string name="menu_icon_my_plants">My plants</string>
    <string name="menu_icon_search">Search</string>
    <string name="menu_icon_blog">Blog</string>
    <string name="menu_icon_more">More</string>
    <string name="menu_icon_scan">Scan</string>
    <string name="spaces">Spaces</string>
    <string name="logout">Logout</string>
    <string name="add_space_button">Add space</string>
    <string name="enter_space_name">Enter space name</string>
    <string name="space_name">Space name</string>
    <string name="modify_space_name_button">Modify space name</string>
    <string name="delete_space_button">Delete space</string>
    <string name="modify_space_name_text">Modify space name</string>
    <string name="change_name_button">Change name</string>
    <string name="more">More</string>
    <string name="profile_image_description">profile image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_plant_button">Add new plant</string>
    <string name="add_plant_by_searching_button">Add plant by searching</string>
    <string name="add_plant_by_scanning_button">Add plant by scanning</string>
    <string name="add_a_plant_text">Add a plant</string>
    <string name="search_plant_by_name_text">Search plant by name</string>
    <string name="big_image_desc">Big image of plant</string>
    <string name="small_image_top_desc">Small plant image</string>
    <string name="info_about_plant_text">Info about plant:</string>
    <string name="the_care_schedule_will_be_based_on_these_requriements_text">The care schedule will be based on these requriements</string>
    <string name="plant_requirements_text">Plant requirements</string>
    <string name="add_to_space_button">Add to space...</string>
    <string name="add_to_space">Add to space</string>
    <string name="delete_plant_button">Delete plant</string>
    <string name="change_when_last_watered_button">Change when last watered</string>
    <string name="watering_interval">Watering interval</string>
    <string name="enter_watering_interval">Enter watering interval</string>
    <string name="add_plant_to_space">Add Plant to Space</string>
    <string name="plant_name">Plant Name</string>
    <string name="identify_plant">Identify Plant</string>
    <string name="captured_photo_will_appear_here">Captured photo will appear here</string>
    <string name="add_plant">Add plant</string>
    <string name="take_photo">Take Photo</string>
    <string name="scan_plant">Scan Plant</string>
    <string name="change_when_last_watered">Change when last watered</string>
    <string name="change">Change</string>
    <string name="select_date">Select a date</string>
    <string name="welcome_to_my_app_water_my_plants_that_let_s_you_manage_your_plants_tells_you_when_you_have_to_water_them">Welcome to my app, water my plants, that let\'s you manage your plants and tells you when you have to water them!</string>
    <string name="water_my_plants">Water My Plants</string>
    <string name="go_to_main_page">Go to main page!</string>
    <string name="or_login_with">Or login with:</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="login_with_emain_and_password">Login with emain and password:</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="credits_remaining">Credits for identification remaining:</string>
    <string name="plants_added">Plants added:</string>
    <string name="blog">Blog</string>

</resources>