<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/rounded_square"
        android:backgroundTint="@color/darkerGray">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_when_last_watered"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white" />

        <!-- Date Picker TextInputLayout -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:backgroundTint="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="?attr/buttonBarStyle"
            android:backgroundTint="@color/lightSeaGreen"
            android:id="@+id/buttonSubmit"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"/>
    </LinearLayout>
</LinearLayout>
