<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MoreFragment"
    android:background="@color/lighterGray">
    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#1F1F27">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingVertical="10dp"
            android:layout_centerInParent="true"
            />



    </RelativeLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative1"
        android:textSize="20sp"
        android:id="@+id/textViewUsernameLabel"
        android:layout_centerHorizontal="true"/>
    <ImageView
        android:layout_below="@id/textViewUsernameLabel"
        android:layout_centerHorizontal="true"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:id="@+id/rounded_image_view"

        android:contentDescription="@string/profile_image_description"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded_square"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_centerInParent="true"
        android:id="@+id/button"
        />


</RelativeLayout>