<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterGray"
    tools:context=".activities.PlantDetailsActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/common_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="Lorem ipsum"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/scientific_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lorem ipsum"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="@color/lightslategray"
                android:layout_marginBottom="8dp"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:columnCount="3"
                android:rowCount="2"
                android:layout_marginBottom="10dp"
                >

                <!-- Big image on the left, spans 2 columns and 2 rows -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_rowSpan="2"
                    android:layout_columnSpan="2"
                    android:id="@+id/bigimage"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="2"
                    android:background="@drawable/rounded_squarae_transparent"
                    android:clipToOutline="true"
                    android:src="@drawable/placeholderimage"
                    android:scaleType="centerCrop"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/big_image_desc"/>

                <!-- Top right small image -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/smallTop"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="@drawable/rounded_squarae_transparent"
                    android:clipToOutline="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/placeholderimage"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/small_image_top_desc"/>

                <!-- Bottom right small image -->
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:id="@+id/smalBottom"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:background="@drawable/rounded_squarae_transparent"
                    android:clipToOutline="true"
                    android:layout_margin="5dp"
                    android:src="@drawable/placeholderimage"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/small_image_top_desc"/>
            </GridLayout>

            <Button
                style="?attr/buttonBarStyle"
                android:backgroundTint="@color/lightSeaGreen"
                android:id="@+id/buttonAddToSpace"
                android:textSize="20sp"
                android:layout_marginVertical="10dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_space_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_about_plant_text"
                android:layout_marginBottom="10dp"
                android:textSize="20dp"
                />

            <TextView
                android:id="@+id/description"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dictum ut lectus ac commodo. Aliquam sed ultrices est. Sed sit amet varius lacus. Phasellus ultricies blandit molestie. Donec ac nisi volutpat, pharetra lectus ut, dictum lacus. Praesent a erat vehicula, dapibus libero nec, laoreet risus. Curabitur pharetra vestibulum consectetur. Nam libero tortor, tempor at dolor a, finibus maximus purus. Donec sit amet faucibus mauris, eget volutpat eros. Fusce blandit massa mauris, a vestibulum dui gravida id. Donec ut dui pharetra, mollis metus vel, iaculis nibh. In at lobortis enim. Aliquam vitae massa tortor. Suspendisse odio nulla, consectetur in varius eu, cursus sit amet quam. Mauris at euismod ligula."
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_requirements_text"
                android:textSize="25sp"
                android:layout_marginBottom="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/lightslategray"
                android:text="@string/the_care_schedule_will_be_based_on_these_requriements_text"
                />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/horizontalSquares"
                    />
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details_layout"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/care_guides_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
